--- a/core/src/components/popover/test/adjustment/index.html
+++ b/core/src/components/popover/test/adjustment/index.html
@@ -31,7 +31,7 @@
         const popover = await popoverController.create({
           component: 'popover-example-page',
           event: ev,
-          reference: 'event'
+          reference: 'event',
         });
 
         popover.present();
