--- a/core/src/components/datetime/test/position/index.html
+++ b/core/src/components/datetime/test/position/index.html
@@ -8,6 +8,11 @@
     <link href="../../../../../scripts/testing/styles.css" rel="stylesheet" />
     <script src="../../../../../scripts/testing/scripts.js"></script>
     <script type="module" src="../../../../../dist/ionic/ionic.esm.js"></script>
+    <style>
+      ion-popover.datetime-popover {
+        --min-width: 300px;
+      }
+    </style>
   </head>
 
   <body>
@@ -18,7 +23,7 @@
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
-        <ion-button onclick="presentPopover(defaultPopover, event)">Present Popover</ion-button>
+        <ion-button id="open-datetime" onclick="presentPopover(defaultPopover, event)">Present Popover</ion-button>
         <ion-popover class="datetime-popover" id="default-popover">
           <ion-datetime></ion-datetime>
         </ion-popover>
