--- a/core/src/components/label/label.ios.scss
+++ b/core/src/components/label/label.ios.scss
@@ -1,5 +1,5 @@
-@import './label';
-@import './label.ios.vars';
+@import "./label";
+@import "./label.ios.vars";
 
 // iOS Label
 // --------------------------------------------------
