--- a/core/src/components/datetime/test/display/index.html
+++ b/core/src/components/datetime/test/display/index.html
@@ -36,7 +36,7 @@
 
     <br /><br />
 
-    <ion-datetime value="2022-02-22"></ion-datetime>
+    <ion-datetime value="2022-02-22T16:30:00"></ion-datetime>
 
     <script>
       const datetime = document.querySelector('ion-datetime');
